--- a/venta-pasajes/src/app/app.component.html
+++ b/venta-pasajes/src/app/app.component.html
@@ -1,3 +1,7 @@
-
-<router-outlet />
-
+<nav class="toolbar">
+    <div class="toolbar-content">
+      <a routerLink="/chofer" class="toolbar-button">Choferes</a>
+      <a routerLink="/reservas" class="toolbar-button">Reservas</a>
+    </div>
+  </nav>
+  <router-outlet></router-outlet>  
