--- a/venta-pasajes/src/app/reserva-form.component/reserva-form.component.css
+++ b/venta-pasajes/src/app/reserva-form.component/reserva-form.component.css
@@ -7,7 +7,7 @@ body, html {
   }
   
   /* Contenedor principal */
-  .chofer-form-container {
+  .reserva-form-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,7 +15,7 @@ body, html {
   }
   
   /* Estilo de la tarjeta del formulario */
-  .chofer-form-card {
+  .reserva-form-card {
     background-color: white;
     padding: 20px;
     border-radius: 10px;
@@ -26,7 +26,7 @@ body, html {
   }
   
   /* Estilo del título */
-  .chofer-form-card h2 {
+  .reserva-form-card h2 {
     font-size: 1.5em;
     margin-bottom: 20px;
   }
@@ -44,8 +44,9 @@ body, html {
     font-weight: bold;
   }
   
-  /* Estilos de los inputs */
-  .form-group input {
+  /* Estilos de los inputs y selects */
+  .form-group input,
+  .form-group select {
     width: calc(100% - 20px);
     padding: 10px;
     border: 1px solid #ccc;
@@ -67,5 +68,12 @@ body, html {
   
   .submit-button:hover {
     background-color: #45a049;
+  }
+  
+  /* Estilo de los mensajes de error */
+  .error {
+    color: red;
+    font-size: 0.875em;
+    margin-top: 5px;
   }
   
