implementación lista de reservas y rutas

--- a/venta-pasajes/src/app/app.component.html
+++ b/venta-pasajes/src/app/app.component.html
@@ -1,7 +1,9 @@
 <nav class="toolbar">
     <div class="toolbar-content">
-      <a routerLink="/chofer" class="toolbar-button">Choferes</a>
-      <a routerLink="/reservas" class="toolbar-button">Reservas</a>
+      <a routerLink="/chofer" class="toolbar-button">CHOFERES</a>
+      <a routerLink="/reservas" class="toolbar-button">RESERVAR</a>
+      <a routerLink="/precios" class="toolbar-button">RUTAS</a>
+      <a routerLink="/listaReservas" class="toolbar-button">LISTA RESERVAS</a>
     </div>
   </nav>
   <router-outlet></router-outlet>  
