funcionando lista de reservas

--- a/venta-pasajes/src/app/Components/componentChofer/chofer-list/chofer-list.component.html
+++ b/venta-pasajes/src/app/Components/componentChofer/chofer-list/chofer-list.component.html
@@ -1,6 +1,9 @@
 <div class="choferes-container">
   <h2>Lista de Choferes</h2>
   <button class="add-button" (click)="addChofer()">Agregar Chofer</button>
+  <div *ngIf="choferes.length === 0" class="empty-reservas">
+    No hay choferes disponibles.
+  </div>
   <div class="chofer-grid">
     <div class="chofer-card" *ngFor="let chofer of choferes">
       <div class="chofer-details">
